--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,11 @@
     </nav>
     <div class='whole-page'>
       <h1 id='main-header'>onlyJams Index Page</h1>
+      <% for(let i = 0; i < artists.length; i++) { %>
+        <a href='/onlyJams/<%=artists[i].id%>'><%=artists[i].name%><br/>
+          <img class='artist-img' src='<%=artists[i].img%>'></img>
+        </a><br/>
+      <% } %>
       <a href='/onlyjams/new'>Add a new artist!</a>
     </div>
   </body>
