--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
-
+    <nav>
+    </nav>
+    <h1><%=artist.name%></h1>
+    <h3><%=artist.location%></h3>
   </body>
 </html>
