--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,12 @@
         <a href='/onlyJams/<%=artists[i].id%>'><%=artists[i].name%><br/>
           <img class='artist-img' src='<%=artists[i].img%>'></img>
         </a><br/>
+        <form action='/onlyJams/<%=artists[i].id%>/edit' method='GET'>
+          <input type="submit" value="EDIT">
+        </form>
+        <form action='/onlyJams/<%=artists[i].id%>?_method=DELETE' method='POST'>
+          <input type="submit" value="DELETE">
+        </form>
       <% } %>
       <a href='/onlyjams/new'>Add a new artist!</a>
     </div>
