--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
     <title></title>
+    <%- include ('./partials/head.ejs') %>
   </head>
   <body>
-    <nav>
-      <% if (currentUser) { %>
-      <li>Welcome <%= currentUser.username %></li>
-      <li>
-        <form action="/sessions?_method=DELETE" method="POST">
-          <input type="submit" value="Log Out" class="btn-small red" />
-        </form>
-      </li>
-      <% } else { %>
-      <li><a href="/users/new">Sign Up</a></li>
-      <li><a href="/sessions/new">Log In</a></li>
-      <% } %>
-    </nav>
+    <%- include ('./partials/nav.ejs') %>
     <form action='/onlyJams' method='POST'>
       Name: <input type="text" name="name"><br/>
       Location: <input type="text" name="location"><br/>
       Image: <input type="text" name="img"><br/>
       <input type="submit" value="Submit Artist">
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
