--- a/views/new_album.ejs
+++ b/views/new_album.ejs
@@ -3,21 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <%- include ('./partials/head.ejs') %>
   </head>
   <body>
-    <nav>
-      <% if (currentUser) { %>
-      <li>Welcome <%= currentUser.username %></li>
-      <li>
-        <form action="/sessions?_method=DELETE" method="POST">
-          <input type="submit" value="Log Out" class="btn-small red" />
-        </form>
-      </li>
-      <% } else { %>
-      <li><a href="/users/new">Sign Up</a></li>
-      <li><a href="/sessions/new">Log In</a></li>
-      <% } %>
-    </nav>
+    <%- include ('./partials/nav.ejs') %>
     <form action='/onlyJams/:id/albums' method='POST'>
       Name: <input type="text" name="name" placeholder="Name"><br/>
       Genre: <input type="text" name="genre" placeholder="Genre"><br/>
@@ -25,5 +14,6 @@
       Tracks: <input type="text" name="track_list" placeholder="Seperate tracks with a comma"><br/>
       <input type="submit" value="Submit">
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
