--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <%- include ('../partials/head.ejs') %>
     <title></title>
   </head>
   <body>
+    <%- include ('../partials/nav.ejs') %>
     <h1>New User Signup</h1>
     <form action="/users" method="post">
         Username: <input type="text" name="username" required>
         Password: <input type="text" name="password" required>
         <input type="submit" value="CREATE USER">
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
