--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,8 @@
     <%- include ('./partials/nav.ejs') %>
     <h1 id='main-header'>onlyJams Index Page</h1>
     <div class='whole-page'>
-      <img src='http://beamavisuals.com/wp-content/uploads/2016/03/Excision_XVision2012_IdentityFestRukes.jpg'>MAIN IMAGE</img>
+      <h1>
+      <iframe width="1280" height="720" src="https://www.youtube.com/embed/Qxbtsn8qt2w?t=78" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <% for(let i = 0; i < artists.length; i++) { %>
         <div class='flex-container'>
           <a class='artist-link' href='/onlyJams/<%=artists[i].id%>'>
