--- a/views/new_album.ejs
+++ b/views/new_album.ejs
@@ -12,6 +12,7 @@
       Genre: <input type="text" name="genre" placeholder="Genre"><br/>
       Image: <input type="text" name="img" placeholder="Image Link Here"><br/>
       Tracks: <input type="text" name="track_list" placeholder="Seperate tracks with a comma"><br/>
+      Artist: <input type='text'
       <input type="submit" value="Submit">
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
