--- a/public/style.css
+++ b/public/style.css
@@ -5,26 +5,78 @@
   height:2.5vh;
 } */
 
+* {
+  font-family: Helvetica, Arial, sans-serif;
+}
+
 body {
-  background-color: #140330;
+  /* background-color: #140330; */
+  /* background: rgb(0,0,0); */
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 45%, rgb(102,16,242) 100%);
   text-decoration: none;
   color: #e0cffc;
+  height: 100%;
+  width: 100%;
 }
-h4 {
+
+p {
   text-align: center;
   text-decoration: none;
   color:#e0cffc;
   padding: 2px;
+  font-weight: lighter;
+  font-size: 1em
   /* border: 2px solid gray; */
 }
-.artist-link {
-  text-decoration: none;
+
+.show-page-body {
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 45%, rgb(102,16,242) 100%);
+  height: 100%
 }
+
 .whole-page {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.flex-container {
+  display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  flex-direction: row;
+  width: 100vw;
+  align-items: center;
+  justify-content: center;
+}
+
+/* responsive video && container from w3 schools- https://www.w3schools.com/howto/howto_css_responsive_iframes.asp */
+.vid-container {
+  position: relative;
+  overflow: hidden;
+  width: 75%;
+  height: 100%;
+  padding-top: 41.25%;
+}
+
+.responsive-vid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 75vw;
+  height: 75vh;
+}
+
+.artist-container {
+  width: 205px;
+  margin: .5vmin
+}
+
+.artist-link {
+  text-decoration: none;
 }
 
 .artist-img {
@@ -59,7 +111,6 @@ h4 {
   width: 97px;
 }
 
-
 .navbar-button-1 {
   position: absolute;
   top: 0px;
@@ -70,7 +121,6 @@ h4 {
   align-items: center;
   text-decoration: none;
 }
-
 
 .button:hover {
   background-color: #843ff3;
@@ -101,6 +151,16 @@ h4 {
   right: 0;
 }
 
+.logout-btn {
+    height: 5vh;
+}
+
 #new-artist {
   text-align: center;
+}
+
+#welcome-message {
+  position: absolute;
+  top: 1vh;
+  right: 10vw;
 }
