--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,12 +5,13 @@
     <%- include ('./partials/head.ejs') %>
   </head>
   <body>
-    <%- include ('./partials/nav.ejs') %>
-    <h1><%=artist.name%></h1>
-    <img src='<%=artist.img%>'></img>
-    <h3><%=artist.location%></h3>
-    <!-- <a href='<%=artist.id%>/new_album'>Add an album</a> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <%=
+    <div class='show-page-body'>
+      <%- include ('./partials/nav.ejs') %>
+      <h1><%=artist.name%></h1>
+      <img src='<%=artist.img%>'></img>
+      <h3><%=artist.location%></h3>
+      <!-- <a href='<%=artist.id%>/new_album'>Add an album</a> -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </div>
   </body>
 </html>
