--- a/public/style.css
+++ b/public/style.css
@@ -5,18 +5,26 @@
   height:2.5vh;
 } */
 
+a {
+  text-align: center;
+}
+
 * {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
+  letter-spacing: 2px;
 }
 
 body {
   /* background-color: #140330; */
   /* background: rgb(0,0,0); */
-  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 45%, rgb(102,16,242) 100%);
+  background: rgb(102,16,242);
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 40%, rgb(102,16,242) 100%);
   text-decoration: none;
   color: #e0cffc;
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 p {
@@ -29,9 +37,58 @@ p {
   /* border: 2px solid gray; */
 }
 
+h1 {
+  text-align: center;
+  text-decoration: none;
+  color:#e0cffc;
+  padding: 10px;
+  margin-top: 10vh;
+  margin-bottom: -15VH;
+  font-weight: lighter;
+  font-size: 4em;
+}
+.sign-in-body {
+  margin-bottom: 100vh;
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgb(102,16,242) 100%);
+}
+
+.new-artist-page{
+  top: 0;
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgb(102,16,242) 100%);
+}
+.artist-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  margin-top: 5vmax;
+  padding-bottom: 45vh;
+}
+
+.artist-form {
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
+  align-items: flex-start;
+  /* margin-top: 10vh; */
+  width: 50vw;
+  height: 50vh;
+  /* background-color: #e0cffc; */
+  font-size: 1.3em;
+}
+
 .show-page-body {
-  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 45%, rgb(102,16,242) 100%);
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 60%, rgb(102,16,242) 100%);
   height: 100%
+}
+
+.container-fluid{
+  display: flex;
+  align-items: flex-start;
+  height: 75%;
+  margin-right: 1vw;
 }
 
 .whole-page {
@@ -49,6 +106,7 @@ p {
   width: 100vw;
   align-items: center;
   justify-content: center;
+
 }
 
 /* responsive video && container from w3 schools- https://www.w3schools.com/howto/howto_css_responsive_iframes.asp */
@@ -66,13 +124,20 @@ p {
   left: 0;
   bottom: 0;
   right: 0;
-  width: 75vw;
+  width: 75vmax;
   height: 75vh;
+}
+.artist {
+  padding: .3vmin;
 }
 
 .artist-container {
-  width: 205px;
-  margin: .5vmin
+  width: 60vw;
+  margin: .5vmin;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .artist-link {
@@ -85,47 +150,116 @@ p {
   width: 30vmax;
   max-height: 200px;
   max-width: 200px;
-  border: 2px solid #140330;
+  /* border: 2px solid #140330; */
   border-radius: 15px;
 }
 
-.navbar {
+.sticky-top {
   position: absolute;
+  background-color: black;
+  margin-right: 10px;
+}
+
+.navbar {
+  /* position: absolute; */
   top: 0;
   left: 0;
   width: 100vw;
-  height: 3vw;
+  height: auto;
   z-index: 1;
   display: flex;
+  justify-content: flex-end;
+  align-content: center;
+  align-items: center;
   background-color: black;
 }
 
 .button {
   background-color: #3d0a91;
   color: #e0cffc;
-  box-shadow: 0px 0px 8px 1px #290661;
-  border: 1px solid #290661;
-  padding: 10px 20px;
+  /* box-shadow: 0px 0px 8px 1px #290661; */
+  /* border: 1px solid #290661; */
+  padding: 15px 25px;
   border-radius: 3px;
+  letter-spacing: .5px;
+  text-align: center;
+
+  /* margin: 5px 2px; */
+  /* width: 2vw;
+  height: 2vh; */
+}
+
+.mod-btn {
+  box-shadow: 0px 0px 8px 1px #290661;
+  /* border: 1px solid #290661; */
   margin: 5px 2px;
-  width: 97px;
+  /* width: 2vw;
+  height: 2vh; */
 }
 
 .navbar-button-1 {
-  position: absolute;
-  top: 0px;
-  left: 0;
   height: 3vh;
-  width: 5vw;
-  border-radius: 1em;
+  width: 2vw;
+  text-align: center;
+  text-decoration: none;
+  background-color: black;
+  border: none;
+  padding-left: 50px;
+}
+.navbar-button-2 {
+  height: 3vh;
+  width: 3vw;
   align-items: center;
   text-decoration: none;
+  background-color: black;
+  border: none;
+  padding:15px;
+}
+
+.signup-container {
+  display: flex;
+  color:#e0cffc;
+  /* background-color: #3d0a91; */
+  justify-content: center;
+  margin-top: 0;
+}
+
+.form {
+  padding: 10px;
+  display: flex;
+  /* margin-top: 10vh; */
+  width: 25vw;
+  height: 2.5vh;
+  background-color: #e0cffc;
+  border-radius: 2vmin;
+  font-size: 2em;
+}
+.login-container {
+  display: flex;
+  color:#e0cffc;
+  /* background-color: #3d0a91; */
+  justify-content: center;
+  margin-top: 0;
+}
+
+.login-form {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 5px;
+  flex-grow: 2;
+  margin-top: 30vmin;
+  color: black;
 }
 
 .button:hover {
   background-color: #843ff3;
   box-shadow: 1px 5px 3px 1px black;
-
+}
+.mod-btn:hover {
+  background-color: #843ff3;
+  box-shadow: 1px 5px 3px 1px black;
 }
 
 .button:active {
@@ -144,6 +278,10 @@ p {
 
 #main-header {
   text-align: center;
+  padding: 1vmax;
+  margin-top: 3vh;
+  font-size: 3em;
+
 }
 
 .login-button {
@@ -152,11 +290,62 @@ p {
 }
 
 .logout-btn {
-    height: 5vh;
+  /* display: flex;
+  height: auto; */
+  width: auto;
+  background-color: black;
 }
 
 #new-artist {
   text-align: center;
+  padding-bottom: 50vh;
+}
+
+.home-btn {
+  text-decoration: none;
+  background-color: black;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 15px;
+}
+/* .home-btn:hover {
+  background-color: black;
+  border-color: #843ff3;
+} */
+
+.add-artist-link {
+  text-decoration: none;
+  color: #e0cffc;
+}
+
+.artist-form-entry {
+  padding: 10px;
+  display: flex;
+  /* margin-top: 10vh; */
+  width: 30vw;
+  height: 2.5vh;
+  background-color: #e0cffc;
+  border-radius: 1vmin;
+  letter-spacing: normal;
+  font-size: 1em;
+}
+.artist-form-area {
+  padding: 10px;
+  display: flex;
+  /* margin-top: 10vh; */
+  width: 30vw;
+  height: 2.5vh;
+  background-color: #e0cffc;
+  border-radius: 1vmin;
+  letter-spacing: normal;
+  font-size: 1em;
+}
+
+.edit-page-img {
+  max-width: 33vw;
+  max-height: 33vh;
+  margin-top: -20%;
+  margin-bottom: 5%;
 }
 
 #welcome-message {
