--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,12 +6,18 @@
   </head>
   <body>
     <%- include ('./partials/nav.ejs') %>
-    <form action='/onlyJams' method='POST'>
-      Name: <input type="text" name="name"><br/>
-      Location: <input type="text" name="location"><br/>
-      Image: <input type="text" name="img"><br/>
-      <input type="submit" value="Submit Artist">
-    </form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <div class='new-artist-page'>
+
+      <div class='artist-form-container'>
+        <form class='artist-form' action='/onlyJams' method='POST'>
+          Name: <input class='artist-form-entry' type="text" name="name"><br/>
+          Location: <input class='artist-form-entry' type="text" name="location"><br/>
+          Image: <input class='artist-form-area' type="textarea" name="img"><br/>
+          <input class='button' type="submit" value="Submit Artist">
+        </form>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    </div>
   </body>
 </html>
