--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -6,12 +6,16 @@
   </head>
   <body>
     <%- include ('../partials/nav.ejs') %>
-    <h1>New User Signup</h1>
-    <form action="/users" method="post">
-        Username: <input type="text" name="username" required>
-        Password: <input type="text" name="password" required>
-        <input type="submit" value="CREATE USER">
-    </form>
+    <div class='sign-in-body'>
+      <div class='login-container'>
+        <h1>New User Signup</h1>
+        <form class='login-form' action="/users" method="post">
+            <input class='form' type="text" name="username" placeholder="Unique Username" required></br>
+            <input class='form' type="text" name="password" placeholder="Password" required></br>
+            <input class='button' type="submit" value="CREATE USER">
+        </form>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
