--- a/public/style.css
+++ b/public/style.css
@@ -80,8 +80,8 @@ h1 {
 }
 
 .show-page-body {
-  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 60%, rgb(102,16,242) 100%);
-  height: 100%
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgb(102,16,242) 100%);
+  height: 150vmin;
 }
 
 .container-fluid{
@@ -127,6 +127,17 @@ h1 {
   width: 75vmax;
   height: 75vh;
 }
+
+.show-page-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  margin-top: 10%;
+  margin-bottom: 25%;
+}
+
 .artist {
   padding: .3vmin;
 }
@@ -152,6 +163,16 @@ h1 {
   max-width: 200px;
   /* border: 2px solid #140330; */
   border-radius: 15px;
+}
+
+.show-header{
+  margin-top: 0%;
+}
+
+.show-art-img {
+  margin-top: 15vh;
+  max-height: 1000px;
+  max-width: 1000px;
 }
 
 .sticky-top {
