adding an album with the correct artist id

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,9 +11,8 @@
         <h1 class='show-header'><%=artist.name%></h1>
         <img class='artist-img show-art-img' src='<%=artist.img%>'></img>
         <h3 class='artist-location-show'><%=artist.location%></h3>
+        <a href='<%=artist.id%>/new_album'>Add an album</a>
       </div>
-        <!-- <a href='<%=artist.id%>/new_album'>Add an album</a> -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </div>
   </body>
 </html>
