--- a/public/style.css
+++ b/public/style.css
@@ -5,8 +5,15 @@
   height:2.5vh;
 } */
 
+* {
+  font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
+  letter-spacing: 2px;
+}
+
 a {
   text-align: center;
+  text-decoration: none;
+  color:#e0cffc;
 }
 
 * {
@@ -116,6 +123,7 @@ h1 {
   width: 75%;
   height: 100%;
   padding-top: 41.25%;
+  
 }
 
 .responsive-vid {
@@ -162,7 +170,7 @@ h1 {
   max-height: 200px;
   max-width: 200px;
   /* border: 2px solid #140330; */
-  border-radius: 15px;
+  border-radius: 50%;
 }
 
 .show-header{
@@ -187,6 +195,7 @@ h1 {
   left: 0;
   width: 100vw;
   height: auto;
+  min-height: 45px;
   z-index: 1;
   display: flex;
   justify-content: flex-end;
@@ -226,15 +235,19 @@ h1 {
   background-color: black;
   border: none;
   padding-left: 50px;
+  padding-right: 35px;
 }
 .navbar-button-2 {
   height: 3vh;
   width: 3vw;
+  min-width: 50px;
   align-items: center;
   text-decoration: none;
   background-color: black;
   border: none;
   padding:15px;
+  padding-right: 35px;
+
 }
 
 .signup-container {
@@ -323,11 +336,15 @@ h1 {
 }
 
 .home-btn {
+  height: 3vh;
+  width: 3vw;
+  min-width: 50px;
+  align-items: center;
   text-decoration: none;
   background-color: black;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 15px;
+  border: none;
+  padding-top:27px;
+  padding-bottom: 27px;
 }
 /* .home-btn:hover {
   background-color: black;
