--- a/views/new_album.ejs
+++ b/views/new_album.ejs
@@ -7,14 +7,18 @@
   </head>
   <body>
     <%- include ('./partials/nav.ejs') %>
-    <form action='/onlyJams/:id/albums' method='POST'>
-      Name: <input type="text" name="name" placeholder="Name"><br/>
-      Genre: <input type="text" name="genre" placeholder="Genre"><br/>
-      Image: <input type="text" name="img" placeholder="Image Link Here"><br/>
-      Tracks: <input type="text" name="track_list" placeholder="Seperate tracks with a comma"><br/>
-      Artist: <input type='text'
-      <input type="submit" value="Submit">
-    </form>
+    <div class='artist-form-container'>
+      <div class='artist-form'>
+        <form action='/onlyJams/<%=artist.id%>/albums' method='POST'>
+          Name: <input class='form' type="text" name="album_name" placeholder="Name"><br/>
+          Genre: <input class='form' type="text" name="album_genre" placeholder="Genre"><br/>
+          Image: <input class='form' type="text" name="album_img" placeholder="Image Link Here"><br/>
+          Tracks: <input class='form' type="text" name="album_track_list" placeholder="Seperate tracks with a comma"><br/>
+          <input class='form' type='hidden' name='album_artistID' value="<%=artist.id%>"><br/>
+          <input class='button' type="submit" value="Submit">
+        </form>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
