--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -6,12 +6,12 @@
   </head>
   <body>
     <div class='sign-in-body'>
-      <h1 class>Edit Artist</h1>
+      <h1 class='sign-in-h1'>Edit Artist</h1>
       <%- include ('./partials/nav.ejs') %>
       <div class='new-artist-page'>
         <div class='login-container'>
           <form class='login-form' action='/onlyjams/<%=artist.id%>?_method=PUT' method='POST'>
-            <img class='edit-page-img' src='<%=artist.img%>'></img>
+            <img class='edit-page-img' src='<%=artist.img%>'></img><br/>
             <input class='form' type="text" name="name" value="<%=artist.name%>"><br/>
             <input class='form' type="text" name="location" value="<%=artist.location%>"><br/>
             <input class='form' type="text" name="img" value="<%=artist.img%>"><br/>
