--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@
 * {
   font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
   letter-spacing: 2px;
+  list-style-type: none;
 }
 
 a {
@@ -19,6 +20,15 @@ a {
 * {
   font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
   letter-spacing: 2px;
+}
+
+@-webkit-keyframes Border {
+    0% {border-color: crimson;}
+    20% {border-color: orange;}
+    40% {border-color: yellow;}
+    60% {border-color: green;}
+    80% {border-color: DarkBlue;}
+    100% {border-color: purple}
 }
 
 body {
@@ -88,7 +98,7 @@ h1 {
 
 .show-page-body {
   background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgb(102,16,242) 100%);
-  height: 150vmin;
+  height: 100vmax;
 }
 
 .container-fluid{
@@ -172,13 +182,33 @@ h1 {
   /* border: 2px solid #140330; */
   border-radius: 50%;
 }
+.album{
+
+}
+.album-container{
+  display: flex;
+  flex-direction: row;
+  max-width: 1500px;
+}
+.album-img {
+  object-fit: cover;
+  height: 20vmax;
+  width: 20vmax;
+  max-height: 200px;
+  max-width: 200px;
+  margin: 2px;
+  border: 3px solid black;
+  border-radius: 5%;
+  -webkit-animation: Border 5s infinite alternate;
+}
 
 .show-header{
   margin-top: 0%;
+  margin-bottom: 0;
 }
 
 .show-art-img {
-  margin-top: 15vh;
+  margin-top: 5vmin;
   max-height: 1000px;
   max-width: 1000px;
 }
@@ -260,6 +290,44 @@ h1 {
   /* background-color: #3d0a91; */
   justify-content: center;
   margin-top: 0;
+}
+
+.modal {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal-content {
+  border: 3px solid green;
+  display: flex;
+  align-items: center;
+  margin: 10vmin;
+  position: absolute;
+  top: 15vmin;
+  left: 15vmin;
+  position: absolute;
+  width: auto;
+  height: auto;
+  max-width: 1000px;
+  background: black;
+  padding: 10vmin;
+}
+
+.modal-img {
+  height: 15vmax;
+  width: 15vmax;
 }
 
 .form {
@@ -354,6 +422,14 @@ h1 {
   background-color: black;
   border-color: #843ff3;
 } */
+.artist-show {
+  display: flex;
+  flex-direction:column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+
+}
 
 .add-artist-link {
   text-decoration: none;
@@ -455,4 +531,49 @@ h1 {
   .sign-in-body{
     margin-top: -12vmin;
   }
+  .modal-img {
+    max-width: 100px;
+    max-height: 100px;
+  }
+  .modal-content {
+    position: absolute;
+    display: flex;
+    padding: 5px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    margin: 5px;
+
+    max-height: 70vh;
+    max-width: 85vw;
+    top:15vmin;
+    left:5vmin;
+  }
+  ul {
+  display:flex;
+  flex-direction: column;
+  margin-left: -7.5vmin;
+  /* padding: 10px; */
+  /* max-width:300px; */
+  }
+  li {
+
+  }
 }
+
+.close-modal {
+  position: absolute;
+  bottom: 0;
+  right:0;
+}
+
+/* @-webkit-keyframes Border {
+    0% {border-color: crimson;}
+    20% {border-color: orange;}
+    40% {border-color: goldenrod;}
+    60% {border-color: green;}
+    80% {border-color: DarkBlue;}
+    100% {border-color: purple}
+} */
