--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class='sign-in-body'>
-      <h1 class='sign-in-h1'>Edit Artist</h1>
+      <h1 class='edit-h1'>Edit Artist</h1>
       <%- include ('./partials/nav.ejs') %>
       <div class='new-artist-page'>
         <div class='login-container'>
